<resources>
    <string name="app_name">Corona_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Covid-19</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="pantau_corona_virus">Covid - 19</string>


    <string name="menu_home">World</string>
    <string name="menu_gallery">Country</string>
    <string name="menu_slideshow">Indonesia Provinces</string>
    <string name="menu_tools">Indonesia Statistic</string>
    <string name="menu_share">About Me</string>
    <string name="menu_send">Send</string>
    <string name="todo">TODO</string>
    <string name="covid_19_cases_in_indonesia">Covid-19 Cases in Indonesia</string>
    <string name="communicate">Communicate</string>
    <string name="news">News</string>
    <string name="provinsi">Provinsi</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="_01_january_1990">01 January 1990</string>
    <string name="desc">Desc</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
</resources>
